# doc-ai-agent

./: .gitignore  README.md  pyproject.toml  处置建议发布任务.xlsx
data/: agent-memory.debug.json  agent-memory.debug3.json  agent-memory.eval-current.json  agent-memory.eval-final.json  agent-memory.eval-upgraded.json  knowledge_sources.json
docs/: excel-to-mysql-mapping.md
evals/: context_eval.json  explanation_eval.json  forecast_eval.json  invalid_input_eval.json  multi_turn_eval_20.json  ood_eval.json  strict_acceptance_120.json  strict_acceptance_140.json  strict_acceptance_50.json
scripts/: compare_acceptance_eval.py  export_acceptance_eval_excel.py  import_pest_soil.py  run_acceptance_suite.py  run_multiturn_human_score_eval.py  run_server.py  run_strict_acceptance_eval.py  score_dialogues.py  score_strict_acceptance_eval.py
sql/: openclaw_pest_agent_mysql.sql
tests/: test_acceptance_eval.py  test_access_facade.py  test_advice_engine.py  test_agent.py  test_agent_contracts.py  test_agent_execution_nodes.py  test_agent_orchestration.py  test_agri_semantics.py  test_answer_guard.py  test_answer_style.py  test_auth.py  test_capability_result.py  test_config.py  test_forecast_service.py  test_http_auth.py  test_input_guard.py  test_intent_router.py  test_low_score_regressions.py  test_memory_store.py  test_multiturn_human_score_regressions.py  test_mysql_auth_repository.py  test_quality_benchmark.py  test_query_dsl.py  test_query_engine.py  test_query_parser.py  test_query_plan.py  test_query_planner.py  test_query_planner_decisions.py  test_query_playbook_router.py  (+11 more)
(+109 files in other folders)
