[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-ai-agent"
version = "0.1.0"
description = "MVP AI agent for dispatch platform report Q&A"
requires-python = ">=3.9"
dependencies = [
    "hanlp==2.1.3",
    "instructor==1.15.1",
    "langgraph==0.6.11",
    "langchain-openai==0.3.35",
    "letta-client==1.10.2",
    "llama-index-core==0.14.6",
    "llama-index-embeddings-openai==0.5.1",
    "openai==2.31.0",
    "pydantic==2.12.5",
    "qdrant-client==1.17.1",
    "redis==7.0.1",
]
